<resources>
    <string name="app_name">尤女郎</string>
    <string name="appfinish">再按一次退出应用</string>
    <string name="private_photo">私照</string>
    <string name="private1">私密</string>
    <string name="ranking">排行榜</string>
    <string name="find_find">发现</string>
    <string name="page">尤女郎</string>
    <string name="store">周边</string>
    <string name="model_status">周边</string>
    <string name="store1">商城</string>
    <string name="store2">活动</string>
    <string name="my">我的</string>
    <string name="host_model">热门模特</string>
    <string name="model">模特</string>
    <string name="dynamic">动态</string>
    <string name="newest">最新</string>
    <string name="newhost">最热</string>
    <string name="vip">VIP专区</string>
    <string name="vip1">会员</string>
    <string name="actions_detail">活动详情</string>
    <string name="ptt_model">参与模特</string>
    <string name="details">详情</string>
    <string name="admire">赞</string>
    <string name="order">处理订单</string>
    <string name="project_detail">项目详情</string>
    <string name="project_income">项目回报</string>
    <string name="overpaym">需支付￥</string>
    <string name="choiceness">精选图集</string>
    <string name="attention">关注</string>
    <string name="unattention">取消关注</string>
    <string name="attention_she">关注她</string>
    <string name="attention_over">已关注</string>
    <string name="click_unfold">点击展开</string>
    <string name="click_close">点击关闭</string>
    <string name="man">男</string>
    <string name="men">女</string>
    <string name="ranking1">热销榜</string>
    <string name="ranking2">经典榜</string>
    <string name="ranking3">新人榜</string>
    <string name="ranking4">红人榜</string>
    <string name="ranking5">飙升榜</string>
    <string name="subscription">订阅量</string>
    <string name="register">注册</string>
    <string name="over_pay">已购买的</string>
    <string name="VR">视频/VR</string>
    <string name="Video">视频</string>
    <string name="privateVideo">私密视频</string>
    <string name="videoson">视频列表</string>
    <string name="vrson">VR列表</string>
    <string name="comment_inter">评论互动</string>
    <string name="more_cotent">更多内容</string>
    <string name="free">免费</string>
    <string name="mycollect">我的收藏</string>
    <string name="delete">删除</string>
    <string name="clear">清除缓存</string>
    <string name="upload">检查更新</string>
    <string name="about">关于我们</string>
    <string name="disclaimer">免责声明</string>
    <string name="help">帮助</string>
    <string name="system_setting">系统设置</string>
    <string name="address">收货地址：</string>
    <string name="wechat">微信号：</string>
    <string name="consignee">收货人：</string>
    <string name="allorder">全部订单</string>
    <string name="refund_order">退款订单</string>
    <string name="VC">VC</string>
    <string name="Vr">VR</string>
    <string name="my_order">我的订单</string>
    <string name="order_details">订单详情</string>
    <string name="daily_task">每日任务</string>
    <string name="unread">未读</string>
    <string name="special">专辑</string>
    <string name="privatephoto">个人私照</string>
    <string name="wechat_pay">微信支付</string>
    <string name="ali_pay">支付宝</string>
    <string name="comvideo">2D视频</string>
    <string name="attestation">申请认证</string>
    <string name="vrvideo">VR视频</string>
    <string name="server_details">工作时间：上午09:00-凌晨01:00（非工作期间可留言）</string>
    <string name="qq_server">QQ客服</string>
    <string name="skill_server">技术客服</string>
    <string name="download_intro">如何下载\"尤女郎\"?</string>
    <string name="why_receiver_msg">为什么我介绍不了\"尤女郎”的推送消息?</string>
    <string name="dont_cotent">打开\"尤女郎\"后无内容怎么办?</string>
    <string name="use_search">如何使用搜索?</string>
    <string name="use_collect">如何收藏我喜欢的内容?</string>
    <string name="use_comment">评论规则</string>
    <string name="pay_fail">我充值/购买失败了怎么办?</string>
    <string name="user_upload_why">用户版本升级账户出现问题怎么办?</string>
    <string name="download_details">为保证您的合法权益，请在官网或者官方授权应用商店下载尤女郎</string>
    <string name="msg_details">尤女郎每日均会向用户推送及时，精彩的专辑，花絮消息 如果您无法接收推送的消息,您可按如下设置：  \n1.进入设置   \n2.进入通知管理  \n3.选择“尤女郎\"   \n4.开启“允许应用提醒”</string>
    <string name="content_details">导致“尤女郎”打开后无内容的原因可能是:   \n1. 您当前网络状态不佳   \n2. 您当前运营商的dns解析有问题   \n3. 您设置了代理模式访问问题  \n1、2烦请您下拉刷新几下即可，问题3则进入手机的设置中关闭代理上网即可</string>
    <string name="use_search_details">“尤女郎”1.0为了方便用户对大量的内容进行查找，增加了搜索功能， “尤女郎”的搜索功能可以按：  \n1. 按期号进行搜索   \n2. 按模特名进行搜索   \n3. 按图片标签进行搜索</string>
    <string name="use_collect_details">1. 进入看图页后可以对您喜欢的图片进行收藏   \n2. 播放视频/VR时可以对您喜欢的视频，VR进行收藏   \n3. 进入“我的”->“我的收藏” 即可查看您收藏的上述内容></string>
    <string name="comment_details">1. 不得发表：煽动抗拒、破坏宪法和法律、行政法规实施的言论，煽动颠覆国家政权，推翻社会主义制度的言论，煽动分裂国家、破坏国家统一的言论，煽动民族仇恨、民族歧视、破坏民族团结的言论。 \n2. 不得发表任何违法犯罪的、骚扰性的、中伤他人的、辱骂性的、恐吓性的、伤害性的、淫秽的、不文明的信息资料。  \n3. 不得利用在尤女郎应用注册的账户进行牟利性经营活动。  \n4. 未经本公司同意，禁止用户在尤女郎上发布任何形式的广告</string>
    <string name="pay_details">如果您在充值过程中出现问题，导致充值金额无法到账，请您记录下第三方的支付信息，并联系我们的客服</string>
    <string name="updata_details">亲爱的用户，如果您的app从旧版本升级到新版后，在你重新登录后，发现以前购买的专辑消失了，银果余额没有了，VIP身份消失了这样的问题，   您可能登陆的账户和您以前登陆的账户不一致， 请尝试使用以前您使用过的登录方式： 例如：腾讯QQ，微信  如果仍然无法找回此前的帐号，请联系我们的客服QQ： </string>
    <string name="wx_server">微信客服</string>
    <string name="pay_introduce">充会员更优惠还送豪礼，单期购买需要</string>
    <string name="pay2_introduce">私密照片，单期购买需要</string>
    <string name="user_private_photo">私密照片</string>
    <string name="pay_introduce2">更多精彩内容，加入尤女VIP</string>
    <string name="phone_login">您上次使用的是手机号登录</string>
    <string name="qq_login">您上次使用的是QQ登录 </string>
    <string name="wx_login">您上次使用的是微信登录 </string>
    <string name="wx_number">微信</string>
    <string name="RichScan">你的邀请码：</string>
    <string name="statement_title">用户服务条款 - 免责声明：</string>
    <string name="statement">\n\n\n

请您务必仔细阅读本协议，充分理解各条款内容。您对本应用的使用使得本协议成为对双方有约束力的法律文件。如果您不同意本协议中的任何内容，您则无权安装或使用本应用及其相关服务。您的安装、使用行为将视为对本《协议》的充分知晓和认可，并同意接受本《协议》各项条款的约束。\n
一、本应用服务协议条款的确认和接纳\n\n
1、本应用的各项电子服务的所有权和运作权归本公司所有。用户同意所有注册协议条款并完成注册程序，才能成为本应用的正式用户。用户确认：本协议条款是处理双方权利义务的契约，始终有效，法律另有强制性规定或公司修改本协议相关内容，依其规定。\n
2、用户使用本应用的，即视为用户确认自己具有享受本应用服务、下单购物等相应的权利能力和行为能力，能够独立承担法律责任。\n
3、如果您是18周岁以下的未成年人，请您停止使用本应用。\n
4、您须知晓使用本应用时，可能会接触到令您个人感到不快、不适或厌恶之内容，遇上述情况，请您立即停止使用本应用，本公司将不对上述情况承担责任。\n
5、本公司保留在中华人民共和国（不包括香港特别行政区、澳门特别行政区和台湾地区）适用法律（以下简称“中国法律”）允许的范围内独自决定拒绝服务、关闭用户账户、清除或编辑内容等权利。\n
二、用户注册\n\n
1、用户注册时是指用户登录尤女郎应用，按要求填写相关信息并确认同意本协议的过程。用户在注册成为尤女郎用户时提供的信息应真实、完整、有效，并保证本公司可以通过该等信息与用户本人进行联系。同时，用户也有义务在相关资料发生变更时及时更新注册资料信息。\n
2、在成功注册后，本公司会为每位用户开通一个账户，作为其使用尤女郎应用服务的唯一身份标识，用户应妥善保管该账户的用户名和密码，并对其账户和密码发生的所有活动承担责任。用户不得以任何形式转让或授权他人使用自己的尤女郎账户，也不应用他人账户在尤女郎进行注册和使用。\n
3、用户同意本公司通过邮件、短信、电话等形式，向其发送订单信息、促销活动等告知信息的权利。\n
4、用户同意本公司有权使用用户的注册信息、用户名、密码等信息，登陆进入用户的注册账户，进行合法的证据保全，包括但不限于公证、见证等。\n
三、用户的权利及义务\n\n
1、用户有权根据本协议的约定，在尤女郎应用上浏览信息、参与讨论、参加有关活动（如适用），以及享受尤女郎提供的其他服务。\n
2、用户应当保证在尤女郎的过程中遵守相关法律法规，不扰乱网上浏览、交流的正常秩序。\n
3、本协议根据国家相关法律法规，用户同意严格遵守以下义务，并保证违反以下义务所产生的任何可能侵害他人权益的行为，本公司均不对任何人承担任何责任：\n
a) 不得发表：煽动抗拒、破坏宪法和法律、行政法规实施的言论，煽动颠覆国家政权，推翻社会主义制度的言论，煽动分裂国家、破坏国家统一的言论，煽动民族仇恨、民族歧视、破坏民族团结的言论。\n
b) 不得发表任何违法犯罪的、骚扰性的、中伤他人的、辱骂性的、恐吓性的、伤害性的、淫秽的、不文明的信息资料。\n
c) 不得利用在尤女郎应用注册的账户进行牟利性经营活动。\n
d)	未经本公司同意，禁止用户在尤女郎上发布任何形式的广告。\n
4、用户使用须知及隐私保护\n
用户同意本公司基于下列原因需要使用用户的信息资源：\n
a) 执行应用验证服务；\n
b) 执行应用升级服务；\n
c) 提高用户的使用安全性并提供客户支持；\n
d)	改善或提高应用的技术和服务，例如帮助本公司了解用户使用应用和服务时遇到的问题，帮助我们改善我们应用和服务的质量、性能和安全性；\n
e)	在用户同意的情况下，将根据用户信息作出的统计数据、行为分析等非关联用户身份识别的信息提供给合作单位，用户呈现合作效果；\n
f)	为用户发送通知及尤女郎应用提供的服务信息。\n
5、本公司将会采取合理的措施保护用户信息、不向第三方公开、透露用户信息，除以下情形之外：\n
a) 基于法律或法律赋予权限的政府部门要求；\n
b) 用户同意本公司公开、透露用户信息的；\n
c) 用户与本公司及第三方合作单位之间就用户信息公开或使用另有约定的。\n
6、用户不得利用本应用及服务进行故意制作、传播计算机病毒等破坏性程序，不得针对本服务、与本应用及服务连接的服务器或网络制造干扰、扰乱，或违反连接本应用及服务的网络的任何要求、程序、政策或规则，否则我们将保留追究其法律责任的权利并有权将其提交给相关部门处理。\n
7、用户依本协议条款所取得的服务权利不可转让。\n
8、如用户违反国家法律法规或本协议条款，本公司和合作公司将有权停止向用户提供服务而不需承担任何责任。如导致尤女郎或其合作遭受任何损害或遭受任何来自第三方的纠纷、诉讼、索赔要求等，用户须向本公司或合作公司赔偿相应的损失，用户并需要对其违法服务条款所产生的一切后果负全部法律责任。尤女郎有权认定和删除用户所发表的任何不符合国家法律、法规和政策、本服务条款的任何文章、资料、图片、图表等内容，且不需要对用户另行通知。\n
9、本公司保留在任何时候因为任何原因拒绝向任何人提供服务的权利。\n
四、本公司的权利和义务\n\n
1、本公司有义务在现有技术上维护整个应用的正常运行，并努力提升和改进技术，使用户线上交易活动得以顺利进行。\n
2、对于用户在尤女郎应用作出下列行为的，本公司有权作出删除相关信息、终止提供服务处理，儿无须争得用户的同意：\n
a 本公司有权对用户的注册信息及其他行为进行查阅，发现注册信息或其他行为中存在任何问题的，有权向用户发出询问及要求改正的通知或者作出删除等处理；\n
b用户违反本协议规定或有违反法律法规和地方规章的行为的，本公司有权停止传输并删除其信息，禁止用户发言，限制用户订购，注销账户并按照相关法律规定向相关主管部门进行披露；\n
五、相关说明：\n\n
1、用户在尤女郎发表的言论，仅代表个人观点。对于用户言论的真实性引发的全部责任，由用户自行承担，本公司不承担任何责任。\n
2、用户之间因在尤女郎中的发言而产生或可能产生的任何纠纷和／或损失，由用户自行解决并承担相应的责任，与尤女郎无关。\n
3、除法律另有强制性规定外，未经本公司明确的书面许可，任何单位或个人不得以任何方式非法地全部或部分复制、转载、引用、链接、抓取或以其他方式使用尤女郎应用中的信息内容，否则，本公司有权追究其法律责任。\n
4、尤女郎应用所发布的资料信息下的相关权益（诸如文字、图片、标识、按钮图标、声音文件、视频、数字下载、数据编辑和软件），均属于本公司所有，受中国和国际版权法的保护。\n
5、非经本公司或本公司授权开发并正式发布的其他任何由本应用衍生的软件均属非法，下载、安装、使用此类软件，将可能导致不可预知的风险，由此产生的一切法律责任与纠纷一概与尤女郎无关。\n
六、不可抗力和其他事宜\n\n
1、用户理解和确认，在使用我们服务的过程中，可能会遇到不可抗力等风险因素，使本服务中断。不可抗力是指不能预见、不能克服并不能避免且对一方或双方造成重大影响的客观事件，包括但不限于自然灾害如洪水、地震等以及社会事件如战争、动乱、政府行为等。出现上述情况时，我们将努力在第一时间与相关单位配合，及时进行修复，但是由此给用或第三方造成的损失，我们及合作方在法律允许的范围内免责。\n
2、用户理解并确认，因计算机病毒或黑客攻击，用户或我们的电脑软件、系统、硬件和通信线路出现故障，用户操作不当，或者其他我们无法控制或合理预见的情形导致的服务中断或受阻不承担责任。\n
3、用户理解并确认，为使得网站和服务器能正常运行，我们需要定期或不定期地对我们的设备进行检修或者维护，或针对突发事件进行紧急停机维护，如因此类情况而造成服务的中断或中止，我们无需为此承担法律强制规定之外的任何责任，但我们将尽可能事先提供通知和避免此类情况。\n
Copyright  2012\n

尤女郎</string>
    <string name="logout">退出登录</string>
    <string name="VersonUp">版本升级中请稍后...</string>
    <string name="welcome_msg">点击图标跳过 3秒</string>
    <string name="underway">进行中</string>
    <string name="nowpay">立即抢购</string>
    <string name="ending">已结束</string>
    <string name="update_lead">请耐心等待一会，新版本更精彩哦！</string>
    <string name="save">保存</string>
    <string name="upload1">提交审核</string>
    <string name="send_hb">发红包</string>
    <string name="confirm">确定</string>
    <string name="sales">专辑销量：</string>
    <string name="now_binding">立即绑定</string>
    <string name="next_step">下一步</string>
    <string name="bangdin">绑定</string>
    <string name="moods_index">人气指数：</string>
    <string name="comment_apply">提交申请</string>
    <string name="verify">确认</string>
    <string name="apply_for_super_user">申请成为超级玩家</string>
    <string name="my_production">我的作品</string>
    <string name="income">收入</string>
    <string name="photo">相册</string>
    <string name="unaudit">未审核</string>
    <string name="audit">审核</string>
    <string name="refuse">拒绝</string>
    <string name="unissue">未发布</string>
    <string name="issue">已发布</string>
    <string name="privacy">私密</string>


    <dimen name="size1">1px</dimen>
    <dimen name="size2">2px</dimen>
    <dimen name="size3">3px</dimen>
    <dimen name="size4">4px</dimen>
    <dimen name="size5">5px</dimen>
    <dimen name="size6">6px</dimen>
    <dimen name="size7">7px</dimen>
    <dimen name="size8">8px</dimen>
    <dimen name="size9">9px</dimen>
    <dimen name="size10">10px</dimen>
    <dimen name="size11">11px</dimen>
    <dimen name="size12">12px</dimen>
    <dimen name="size13">13px</dimen>
    <dimen name="size14">14px</dimen>
    <dimen name="size15">15px</dimen>
    <dimen name="size16">16px</dimen>
    <dimen name="size17">17px</dimen>
    <dimen name="size18">18px</dimen>
    <dimen name="size19">19px</dimen>
    <dimen name="size20">20px</dimen>
    <dimen name="size21">21px</dimen>
    <dimen name="size22">22px</dimen>
    <dimen name="size23">23px</dimen>
    <dimen name="size24">24px</dimen>
    <dimen name="size25">25px</dimen>
    <dimen name="size26">26px</dimen>
    <dimen name="size27">27px</dimen>
    <dimen name="size28">28px</dimen>
    <dimen name="size29">29px</dimen>
    <dimen name="size30">30px</dimen>
    <dimen name="size31">31px</dimen>
    <dimen name="size32">32px</dimen>
    <dimen name="size33">33px</dimen>
    <dimen name="size34">34px</dimen>
    <dimen name="size35">35px</dimen>
    <dimen name="size36">36px</dimen>
    <dimen name="size37">37px</dimen>
    <dimen name="size38">38px</dimen>
    <dimen name="size39">39px</dimen>
    <dimen name="size40">40px</dimen>
    <dimen name="size41">41px</dimen>
    <dimen name="size42">42px</dimen>
    <dimen name="size43">43px</dimen>
    <dimen name="size44">44px</dimen>
    <dimen name="size45">45px</dimen>
    <dimen name="size46">46px</dimen>
    <dimen name="size47">47px</dimen>
    <dimen name="size48">48px</dimen>
    <dimen name="size49">49px</dimen>
    <dimen name="size50">50px</dimen>

</resources>
