<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/video_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@mipmap/play_img2" />

        <TextView
            android:id="@+id/player_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="已播放"
            android:textColor="@color/content10"
            android:textSize="11dp" />
    </LinearLayout>

    <TextView style="@style/line_styles_10" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/video_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/video_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginLeft="45dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/attention_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:background="@drawable/blue_corner3"
            android:gravity="right"
            android:paddingBottom="4dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:text="@string/attention_she"
            android:textColor="@color/blue_gps"
            android:textSize="10dp" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/line10"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/more_cotent"
        android:textColor="@color/black11"
        android:textSize="13dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/more_content_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/line10"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/comment_inter"
        android:textColor="@color/black11"
        android:textSize="13dp" />
</LinearLayout>