<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content8"
    android:orientation="vertical">

    <include layout="@layout/title_layout"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/buy_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="Amani T恤男款X1"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/buy_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/buy_name"
                        android:layout_marginTop="5dp"
                        android:text="需支付￥149.00"
                        android:textColor="@color/gray3"
                        android:textSize="12dp" />

                    <ImageView
                        android:id="@+id/cover_img"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_alignParentRight="true"
                        android:scaleType="centerCrop"
                         />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/take_cd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                >

                <RelativeLayout
                    android:id="@+id/change_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/info_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="收货信息"
                        android:textColor="@color/gray3"
                        android:textSize="13dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:text="修改"
                        android:textColor="@color/gray3"
                        android:textSize="13dp" />

                    <TextView
                        android:id="@+id/name_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/info_tv"
                        android:layout_marginTop="15dp"
                        android:text="@string/consignee"
                        android:textColor="@color/black"
                        android:textSize="13dp" />
                    <TextView
                        android:id="@+id/wx_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name_photo"
                        android:layout_marginTop="5dp"
                        android:text="@string/wechat"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                    <TextView
                        android:id="@+id/address_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/wx_tv"
                        android:layout_marginTop="5dp"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/report_cd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/report_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="获得回报"
                        android:textColor="@color/gray3"
                        android:textSize="13dp" />


                    <TextView
                        android:id="@+id/report_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/report_tv"
                        android:layout_marginTop="5dp"
                        android:text="写真预售：获得对应写真套图下载权限两次！"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/pay_way"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="付款方式"
                        android:textColor="@color/gray3"
                        android:textSize="13dp" />

                    <LinearLayout
                        android:id="@+id/ali_ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pay_way"
                        android:layout_marginTop="9dp"
                        android:background="@drawable/cherry_corner3"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="38dp"
                        android:paddingRight="38dp"
                        android:paddingTop="5dp">

                        <ImageView
                            android:id="@+id/ali_logo"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/unali_pay" />

                        <TextView
                            android:id="@+id/ali_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="支付宝"
                            android:textColor="@color/white"
                            android:textSize="13dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/wecha_ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pay_way"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="9dp"
                        android:layout_toRightOf="@+id/ali_ll"
                        android:background="@drawable/gray_shape_corner"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="35dp"
                        android:paddingRight="35dp"
                        android:paddingTop="5dp">

                        <ImageView
                            android:id="@+id/wechat_logo"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/wechat_pay" />

                        <TextView
                            android:id="@+id/wechat_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="微信支付"
                            android:textColor="@color/gray1"
                            android:textSize="13dp"

                            />
                    </LinearLayout>

                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/leave_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:background="@color/white"
                    android:gravity="center|left|top"
                    android:hint="留言\n有什么需要嘱咐我们吗？若注明礼物，发货将不附订单明细。如需嘱咐卡片，请将简单内容描述此处"
                    android:padding="10dp"
                    android:textColorHint="@color/gray1"
                    android:textSize="13dp" />

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        >

        <TextView
            style="@style/line_styles_ove_w"
            android:layout_above="@+id/bottom_layout" />

        <RelativeLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:padding="10dp">

            <TextView
                android:id="@+id/bottom_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text=""
                android:textColor="@color/cherry1" />

            <TextView
                android:id="@+id/Pay_now"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/cherry_corner3"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="立即支付"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>